# pm1

./: Cargo.toml  LICENSE  README.md  build.rs  example.py  pyproject.toml
src/: lib.rs  primes.rs
